------------------------
class_diagram.png

@startuml
Workout "1" o-- "many"  ExerciseToWorkout 
Exercise "1" o-- "many" ExerciseToWorkout

class Workout {
	-String id
	-String description
	-String image_string
	-String name
	-List exercises
	+string get_description()
	+List get_exercises()
	+string get_image_string()
	+string get_name()
	+List set_exercises()
}

class Exercise {
	-String id
	-String description
	-String image_string
	-String name
	-String video_url
	+string get_description()
	+string get_image_string()
	+string get_name()
	+string get_video_url()
}

class ExerciseToWorkout {
	-String exercise_id
	-String routine_id
	-String length
	-int no
	+String get_length()
	+String get_no()
}
@enduml

PlantUML version 1.2019.12(Sun Nov 03 10:24:54 UTC 2019)
(GPL source distribution)
Java Runtime: Java(TM) SE Runtime Environment
JVM: Java HotSpot(TM) 64-Bit Server VM
Java Version: 1.7.0_25-b15
Operating System: Linux
Default Encoding: UTF-8
Language: en
Country: US

------------------------
